@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-26T16:17:24Z",
-  "count" : 205,
-  "count_minmax" : [ 113, 205 ],
-  "count_decinc" : [ -0, +205 ],
+  "timestamp" : "2023-09-27T00:59:15Z",
+  "count" : 301,
+  "count_minmax" : [ 113, 301 ],
+  "count_decinc" : [ -0, +301 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
