@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-09-26T16:17:24Z",
-  "count_outdated" : 160901,
-  "uniques_outdated" : 1706,
-  "count" : 164561,
+  "timestamp" : "2023-09-27T00:59:15Z",
+  "count_outdated" : 160951,
+  "uniques_outdated" : 1707,
+  "count" : 164657,
   "uniques" : 1738,
   "clones" : [
     {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 14, 50 ],
-      "count_decinc": [ 36, 50 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2023-09-13T00:00:00Z",
-      "count": 51,
-      "count_minmax": [ 51, 51 ],
-      "count_decinc": [ 0, 51 ],
+      "count": 50,
+      "count_minmax": [ 50, 51 ],
+      "count_decinc": [ 1, 51 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 113, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 301,
+      "count_minmax": [ 113, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
