@@ -1,15 +1,10 @@
 {
-  "count": 3624,
+  "count": 3705,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-09-12T00:00:00Z",
-      "count": 14,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-13T00:00:00Z",
-      "count": 51,
+      "count": 50,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 205,
+      "count": 301,
       "uniques": 3
     }
   ]
